alignment fix

--- a/src/components/styles/home.scss
+++ b/src/components/styles/home.scss
@@ -38,7 +38,7 @@
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 10px;
   grid-auto-rows: 50px;
-  grid-template-areas: ". . a b . .";
+  grid-template-areas: ". . a b . . . . . . . . . .";
   .grid-col {
     align-self: center;
   }
